--- a/teachoutreach.html
+++ b/teachoutreach.html
@@ -14,11 +14,12 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-      	<a href="research.html" class="btn">Research</a>
-        <a href="personal.html" class="btn">Personal</a>
-        <a href="teachoutreach.html" class="btn">Teaching/Outreach</a>
- 	<a href="CV.pdf" class="btn">CV</a>
-   </header>
+      	<a href="gonihalevi.github.io/research.html" class="btn">View on GitHub</a>
+            {% if site.show_downloads %}
+        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
+        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
+      {% endif %}
+    </header>
 
     <main id="content" class="main-content" role="main">
       {{ content }}
