--- a/constants.html
+++ b/constants.html
@@ -16,13 +16,13 @@
 NIST Constant Index</a>)
 </center>
 <center>
-<table border=0 cellpadding=1>
+<table border=1 cellpadding=1>
 <tr>
 <th align=left>name</th>
 <th align=left>symbol</th>
 
 <th align=left>number</th>
-<th align=left>exponent</th>
+<th align=center>exponent</th>
 <th align=left>cgs units</th>
 <th align=left>relative error<br>(ppm)</th>
 </tr>
@@ -40,157 +40,151 @@ NIST Constant Index</a>)
 <tr>
 <td align=left>Planck constant</td>
 <td align=left>h</td>
-<td align=left>6.6260755(40)</td>
+<td align=left>6.62607015</td>
 <td align=right>-27</td>
 
 <td align=left>&nbsp;erg s</td>
-<td align=left>0.60</td>
+<td align=left>exact</td>
 </tr>
 
 <tr>
 <td align=left></td>
-<td align=left>hbar</td>
-<td align=left>1.05457266(63)</td>
+<td align=left>hbar = h/2pi</td>
+<td align=left>1.054571817</td>
 <td align=right>-27</td>
 <td align=left>&nbsp;erg s</td>
-<td align=left>0.60</td>
+<td align=left>exact</td>
 
 </tr>
 
 <tr>
 <td align=left>Gravitational constant</td>
 <td align=left>G</td>
-<td align=left>6.67259(85)</td>
+<td align=left>6.67430</td>
 <td align=right>-8</td>
 <td align=left>&nbsp;cm<sup>3</sup> g<sup>-1</sup> s<sup>-2</sup></td>
 
-<td align=left>128</td>
+<td align=left>22</td>
 </tr>
 
-<!I found SI of 1.60917733(49) C and multiplied by c>
+<!I found SI of 1.602176634 C and multiplied by c>
 <tr>
-<td align=left>Electron charge</td>
+<td align=left>electron charge</td>
 <td align=left>e</td>
-<td align=left>4.8032068(14)</td>
+<td align=left>4.8032047</td>
 <td align=right>-10</td>
 <td align=left>&nbsp;esu</td>
-<td align=left>0.30</td>
+<td align=left>exact</td>
 
 </tr>
 
 <tr>
-<td align=left>Mass of electron</td>
+<td align=left>electron mass</td>
 <td align=left>m<sub>e</sub></td>
-<td align=left>9.1093897(54)</td>
+<td align=left>9.1093837139</td>
 <td align=right>-28</td>
 <td align=left>&nbsp;g</td>
-<td align=left>0.59</td>
+<td align=left>0.00031</td>
 </tr>
 
 <tr>
-<td align=left>Mass of proton</td>
+<td align=left>proton mass</td>
 <td align=left>m<sub>p</sub></td>
-<td align=left>1.6726231(10)</td>
+<td align=left>1.67262192595</td>
 <td align=right>-24</td>
 <td align=left>&nbsp;g</td>
-<td align=left>0.59</td>
+<td align=left>0.00031</td>
 </tr>
 
 <tr>
-<td align=left>Mass of neutron</td>
+<td align=left>neutron mass</td>
 <td align=left>m<sub>n</sub></td>
-<td align=left>1.6749286(10)</td>
+<td align=left>1.67492750056</td>
 <td align=right>-24</td>
 <td align=left>&nbsp;g</td>
-<td align=left>0.59</td>
+<td align=left>0.00051</td>
 </tr>
 
 <tr>
 
-<td align=left>Mass of hydrogen</td>
+<td align=left>hydrogen mass</td>
 <td align=left>m<sub>H</sub></td>
-<td align=left>1.6733</td>
+<td align=left>1.6735576952</td>
 <td align=right>-24</td>
 <td align=left>&nbsp;g</td>
 <td align=left>--</td>
 </tr>
 
 <tr>
-<td align=left>Atomic mass unit</td>
-
+<td align=left>atomic mass unit</td>
 <td align=left>amu</td>
-<td align=left>1.6605402(10)</td>
+<td align=left>1.66053906892</td>
 <td align=right>-24</td>
 <td align=left>&nbsp;g</td>
-<td align=left>0.59</td>
+<td align=left>0.00031</td>
 </tr>
 
 <tr>
-<td align=left>Avagadro's number</td>
+<td align=left>Avogadro's number</td>
 <td align=left>N<sub>A</sub></td>
-
-<td align=left>6.0221367(36)</td>
+<td align=left>6.02214076</td>
 <td align=right>23</td>
 <td align=left></td>
-<td align=left>0.59</td>
+<td align=left>exact</td>
 </tr>
 
 <tr>
 <td align=left>Boltzmann constant</td>
 <td align=left>k</td>
-<td align=left>1.380658(12)</td>
+<td align=left>1.380649</td>
 <td align=right>-16</td>
-
 <td align=left>&nbsp;erg k<sup>-1</sup></td>
-<td align=left>8.5</td>
+<td align=left>exact</td>
 </tr>
 
 <tr>
-<td align=left>Electron volt</td>
+<td align=left>electron volt</td>
 <td align=left>eV</td>
-<td align=left>1.6021772(50)</td>
+<td align=left>1.602176634</td>
 <td align=right>-12</td>
 <td align=left>&nbsp;erg</td>
-
-<td align=left>~0.60</td>
-</tr>
-
-<tr>
-<td align=left>Radiation density constant</td>
-<td align=left>a</td>
-<td align=left>7.5646</td>
-<td align=right>-15</td>
-<td align=left>&nbsp;erg cm<sup>-3</sup> K<sup>-4</sup></td>
-
-<td align=left>--</td>
+<td align=left>exact</td>
 </tr>
 
 <tr>
 <td align=left>Stefan-Boltzmann constant</td>
 <td align=left>\sigma</td>
-<td align=left>5.67051(19)</td>
+<td align=left>5.670374419</td>
 <td align=right>-5</td>
 <td align=left>&nbsp;erg cm<sup>-2</sup> K<sup>-4</sup> s<sup>-1</sup></td>
-
-<td align=left>34</td>
+<td align=left>exact</td>
 </tr>
 
 <tr>
-<td align=left>Fine structure constant</td>
+<td align=left>radiation density constant</td>
+<td align=left>a</td>
+<td align=left>7.56573325</td>
+<td align=right>-15</td>
+<td align=left>&nbsp;erg cm<sup>-3</sup> K<sup>-4</sup></td>
+<td align=left>--</td>
+</tr>
+
+<tr>
+<td align=left>fine structure constant</td>
 <td align=left>\alpha</td>
-<td align=left>7.29735308(33)</td>
+<td align=left>7.2973525643</td>
 <td align=right>-3</td>
 <td align=left></td>
-<td align=left>0.045</td>
+<td align=left>0.00016</td>
 </tr>
 
 <tr>
 <td align=left>Rydberg constant</td>
 <td align=left>R<sub>\inf</sub></td>
-<td align=left>2.1798741(13)</td>
+<td align=left>2.1798723611030</td>
 <td align=right>-11</td>
 <td align=left>&nbsp;erg</td>
-<td align=left>0.60</td>
+<td align=left>1e-6</td>
 </tr>
 
 </table>
@@ -210,12 +204,11 @@ NAME                    SYMBOL  NUMBER  EXP     CGS UNITS
 ----------------------------------------------------------------
 Astronomical unit	AU	1.496	13	cm
 Parsec			pc	3.086	18	cm
-Light year		ly	9.463	17	cm
-Solar mass		M<sub>o</sub>	1.99	33	g
-Solar radius		R<sub>o</sub>	6.96	10	cm
-Solar luminosity	L<sub>o</sub>	3.9	33	erg s<sup>-1</sup>
-
-Solar Temperature	T<sub>o</sub>	5.780	3	K
+Light year		ly	9.461	17	cm
+Solar mass		M<sub>\odot</sub>	1.99	33	g
+Solar radius		R<sub>\odot</sub>	6.96	10	cm
+Solar luminosity	L<sub>\odot</sub>	3.9	33	erg s<sup>-1</sup>
+solar surface temp	T<sub>\odot</sub>	5.780	3	K
 ----------------------------------------------------------------
 </pre>
 
