--- a/constants.html
+++ b/constants.html
@@ -202,29 +202,29 @@ NIST Constant Index</a>)
 <pre>
 NAME                    SYMBOL  NUMBER  EXP     CGS UNITS
 ----------------------------------------------------------------
-Astronomical unit	AU	1.496	13	cm
-Parsec			pc	3.086	18	cm
-Light year		ly	9.461	17	cm
-Solar mass		M<sub>\odot</sub>	1.99	33	g
-Solar radius		R<sub>\odot</sub>	6.96	10	cm
-Solar luminosity	L<sub>\odot</sub>	3.9	33	erg s<sup>-1</sup>
-solar surface temp	T<sub>\odot</sub>	5.780	3	K
+astronomical unit	AU	1.496	13	cm
+parsec			pc	3.086	18	cm
+light-year		ly	9.461	17	cm
+solar mass		M<sub>\odot</sub>	1.988	33	g
+solar radius		R<sub>\odot</sub>	6.957	10	cm
+solar luminosity	L<sub>\odot</sub>	3.828	erg s<sup>-1</sup>
+solar surface temp	T<sub>\odot</sub>	5.772	3	K
 ----------------------------------------------------------------
 </pre>
 
 <pre>
-NAME	MASS (g)  RADIUS (cm) PERIOD (yr) SEMI-MAJOR (AU) ECCENTRICITY
-----------------------------------------------------------------------
-Mercury	3.303 26  2.439  8    2.4085  -1  3.87096  -1     0.205622
-Venus	4.870 27  6.050  8    6.1521  -1  7.23342  -1     0.006783
-Earth	5.976 27  6.378  8    1.00004  0  9.99987  -1     0.016684
-Mars	6.418 26  3.397  8    1.88089  0  1.523705  0     0.093404
-Jupiter	1.899 30  7.140  9    1.18622  1  5.204529  0     0.047826
-Saturn	5.686 29  6.000  9    2.94577  1  9.575133  0     0.052754
-Uranus	8.66  28  2.615  9    8.40139  1  1.930375  1     0.050363
-Neptune	1.030 29  2.43   9    1.64793  2  3.020652  1     0.004014
-Pluto	1.    25  1.2    8    2.47686  2  3.991136  1     0.256695
-----------------------------------------------------------------------
+NAME	MASS (g)     EQ RADIUS (cm) PERIOD (yr)   SEMI-MAJOR (AU) ECCENTRICITY
+-------------------------------------------------------------------------------
+Mercury	3.30103 e26  2.441  e8       2.4085  e-1  3.87096  e-1    0.205622
+Venus	4.86731 e27  6.052  e8       6.1521  e-1  7.23342  e-1    0.006783
+Earth	5.97217 e27  6.378  e8       1.00004 e0   9.99987  e-1    0.016684
+Mars	6.41691 e26  3.396  e8       1.88089 e0   1.523705 e0     0.093404
+Jupiter	1.89813 e30  7.149  e9       1.18622 e1   5.204529 e0     0.047826
+Saturn	5.68317 e29  6.027  e9       2.94577 e1   9.575133 e0     0.052754
+Uranus	8.68099 e28  2.556  e9       8.40139 e1   1.930375 e1     0.050363
+Neptune	1.02409 e29  2.476  e9       1.64793 e2   3.020652 e1     0.004014
+Pluto	1.3025  e25  1.119  e8       2.47686 e2   3.991136 e1     0.256695
+-------------------------------------------------------------------------------
 </pre>
 
 <hr>
@@ -232,18 +232,17 @@ Pluto	1.    25  1.2    8    2.47686  2  3.991136  1     0.256695
 <h2> Other Information Sources </h2>
 <ul>
 <li>
-<a href="http://physics.nist.gov/PhysRefData/codata86/codata86.html">
+<a href="https://pml.nist.gov/cuu/Constants/">
 NIST Constant Index</a> (best one) 
 <li>
-<a href="http://www.chemie.fu-berlin.de/chemistry/general/constants.html">
-
-Fundamental Physical Constants</a> (SI) 
+<a href="https://arxiv.org/pdf/1510.07674">
+IAU Solar and Planetary Constant Resolution</a> (SI)
 <li>
-<a href="http://wulff.mit.edu/constants.html">
-Fundamental Physical Constants</a> (SI with errors) 
+<a href="https://ssd.jpl.nasa.gov/planets/phys_par.html">
+JPL Planetary Physical Parameters</a> (SI)
 <li>
-<a href="http://www.ksc.nasa.gov/facts/faq04.html">
-NASA Faq</a> - numbers and equations
+</a>
+</li>
 </ul>
 
 
